--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flowbite": "^2.3.0",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
