--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest",
+    "coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@pinia/nuxt": "^0.5.1",
     "flowbite": "^2.3.0",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
-    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.0"
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "vitest": "^1.6.0"
   }
 }
