--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "test": "vitest",
-    "coverage": "vitest --coverage"
+    "coverage": "vitest --coverage",
+    "start": "node .output/server/index.mjs"
   },
   "dependencies": {
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
@@ -25,5 +26,8 @@
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "vitest": "^1.6.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   }
 }
