--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vitest/coverage-v8": "^1.6.0",
     "vitest": "^1.6.0"
   },
   "optionalDependencies": {
